--- a/style.css
+++ b/style.css
@@ -22,3 +22,11 @@
     background-color: purple;
     margin: .25rem !important;
 }
+.answerBar{
+    text-align: center;
+    width: 50%;
+    position: absolute;
+    top: 50%;
+    left: 25%;
+    margin-top: 30px;
+}
