added high scores page

--- a/style.css
+++ b/style.css
@@ -1,14 +1,16 @@
 .mainContent{
     position: fixed;
-    text-align: center;
     top: 30%;
     left: 50%;
     transform: translate(-50%,-50%);
+    text-align: center;
     width:500px;
     font-weight: bold;
-    border: black solid 1px;
-    padding: 100px;
+    /* display: inline-block; */
+    /* border: black solid 1px; */
+    /* padding: 100px; */
     }
+  
 .btn{
     background-color: purple;
     color: white;
@@ -23,10 +25,17 @@
     margin: .25rem !important;
 }
 .answerBar{
-    text-align: center;
+    text-align: left;
     width: 50%;
     position: absolute;
     top: 50%;
     left: 25%;
     margin-top: 30px;
+}
+.divEl{
+    width: 100%
+}
+
+a{
+    color: inherit;
 }
